Add checker